--- a/.github/workflows/auto-readme.yml
+++ b/.github/workflows/auto-readme.yml
@@ -1,53 +1,71 @@
 name: "auto-readme"
 on:
+  workflow_dispatch:
+
   schedule:
-  # Update context.tf nightly
-  - cron:  '0 3 * * *'
+  # Example of job definition:
+  # .---------------- minute (0 - 59)
+  # |  .------------- hour (0 - 23)
+  # |  |  .---------- day of month (1 - 31)
+  # |  |  |  .------- month (1 - 12) OR jan,feb,mar,apr ...
+  # |  |  |  |  .---- day of week (0 - 6) (Sunday=0 or 7) OR sun,mon,tue,wed,thu,fri,sat
+  # |  |  |  |  |
+  # *  *  *  *  * user-name command to be executed
+
+  # Update README.md nightly at 4am UTC
+  - cron:  '0 4 * * *'
 
 jobs:
   update:
-    if: github.event_name == 'schedule'
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
-    container: cloudposse/build-harness:slim-latest
     steps:
     - uses: actions/checkout@v2
 
-    - name: Update context.tf
+    - name: Find default branch name
+      id: defaultBranch
+      shell: bash
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      run: |
+        default_branch=$(gh repo view --json defaultBranchRef --jq .defaultBranchRef.name)
+        printf "::set-output name=defaultBranch::%s\n" "${default_branch}"
+        printf "defaultBranchRef.name=%s\n" "${default_branch}"
+
+    - name: Update readme
       shell: bash
       id: update
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        DEF: "${{ steps.defaultBranch.outputs.defaultBranch }}"
       run: |
-        wget https://raw.githubusercontent.com/Dabble-of-DevOps-BioHub/biohub-info/master/docs/README.md.gotmpl -O /tmp/README.md.gotmpl
-        make README_TEMPLATE_FILE=/tmp/README.md.gotmpl BUILD_HARNESS_PATH=/build-harness PACKAGES_PREFER_HOST=true -f /build-harness/templates/Makefile.build-harness readme 
-
-        if git diff --no-patch --exit-code context.tf; then
-          echo "No changes detected! Exiting the job..."
-        else
-          echo "README file has changed. Update examples and rebuild README.md."
-          echo "::set-output name=create_pull_request::true"
+        make init
+        make readme/build
+        # Ignore changes if they are only whitespace
+        if ! git diff --quiet README.md && git diff --ignore-all-space --ignore-blank-lines --quiet README.md; then
+          git restore README.md
+          echo Ignoring whitespace-only changes in README
         fi
 
     - name: Create Pull Request
-      if: steps.update.outputs.create_pull_request == 'true'
-      uses: cloudposse/actions/github/create-pull-request@0.22.0
+      # This action will not create or change a pull request if there are no changes to make.
+      # If a PR of the auto-update/readme branch is open, this action will just update it, not create a new PR.
+      uses: cloudposse/actions/github/create-pull-request@0.30.0
       with:
         token: ${{ secrets.PUBLIC_REPO_ACCESS_TOKEN }}
-        committer: 'cloudpossebot <11232728+cloudpossebot@users.noreply.github.com>'
-        author: 'cloudpossebot <11232728+cloudpossebot@users.noreply.github.com>'
-        commit-message: Update context.tf from origin source
-        title: Update context.tf
+        commit-message: Update README.md and docs
+        title: Update README.md and docs
         body: |-
           ## what
-          This is an auto-generated PR that updates the `README.md` file to the latest version from `Dabble-of-DevOps-BioHub/biohub-info`
+          This is an auto-generated PR that updates the README.md and docs
 
           ## why
-          To support all the changes in the main README 
+          To have most recent changes of README.md and doc from origin templates
 
         branch: auto-update/readme
-        base: master
+        base: ${{ steps.defaultBranch.outputs.defaultBranch }}
         delete-branch: true
         labels: |
           auto-update
+          no-release
           readme
-
